--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["js/instant_page.min.js","js/lazyimages.js"]
+      "js": ["js/instant_page.min.js","js/lazy_images.js"]
     }
   ]
 
